# mfs-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/commands/: mfs_file_info.rst
experiments/lynch_2024_pfm/: 01_concat_check.ipynb  02_distance_check.ipynb  03_regress_check.ipynb  04_smooth_check.ipynb  05_infomap_check.ipynb  06_network_assignment_check.ipynb  README.md  adhoc_validate_subcortical_coordinates.ipynb
src/mfs_tools/: __init__.py
src/mfs_tools/commands/: mfs_aggregate_decoder_scores.py  mfs_concat.py  mfs_decode.py  mfs_decoder_from_mask_and_weights.py  mfs_file_info.py  mfs_make_fconn_networks.py  mfs_make_infomap_and_cifti.py  mfs_make_infomap_networks.py  mfs_plot_memory_usage.py
tests/: test_matrices.py
