[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mfs-tools"
version = "0.0.10"
authors = [
    { name="Mike Schmidt", email="mikeschmidt@schmidtgracen.com" },
]
maintainers = [
    { name="Mike Schmidt", email="mikeschmidt@schmidtgracen.com" },
]
description = "Logic and commands to facilitate neuroimaging processing and analyses"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "nibabel>=5",
]

[project.urls]
Homepage = "https://github.com/mfschmidt/mfs_tools"
Issues = "https://github.com/mfschmidt/mfs_tools/issues"

[project.scripts]
mfs_file_info = "mfs_tools.commands.mfs_file_info:main"
