[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mfs-tools"
version = "0.0.10"
authors = [
    { name="Mike Schmidt", email="mikeschmidt@schmidtgracen.com" },
]
maintainers = [
    { name="Mike Schmidt", email="mikeschmidt@schmidtgracen.com" },
]
description = "Logic and commands to facilitate neuroimaging processing and analyses"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "nibabel>=5",
    "pandas>=2.0.3",
    "templateflow~=24.2.2",
    "nibabel~=5.3.2",
    "nilearn~=0.11.1",
    "scipy~=1.16.1",
    "psutil~=7.0.0",
    "matplotlib~=3.10.5",
    "seaborn~=0.13.2",
    "debugpy~=1.8.15",
    "h5py~=3.14.0",
    "google-auth~=2.40.3",
    "google-auth-oauthlib~=1.2.2",
    "google-api-python-client~=2.177.0",
]

[project.urls]
Homepage = "https://github.com/mfschmidt/mfs_tools"
Issues = "https://github.com/mfschmidt/mfs_tools/issues"

[project.scripts]
mfs_file_info = "mfs_tools.commands.mfs_file_info:main"
