[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mfs-tools"
version = "0.0.11"
authors = [
    { name="Mike Schmidt", email="mikeschmidt@schmidtgracen.com" },
]
maintainers = [
    { name="Mike Schmidt", email="mikeschmidt@schmidtgracen.com" },
]
description = "Logic and commands to facilitate neuroimaging processing and analyses"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.2",
    "nibabel>=5",
    "pandas>=2.3",
    "templateflow>=24",
    "nibabel>=5.3",
    "nilearn>=0.11",
    "scipy>=1.15",
    "psutil>=7.0",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "debugpy>=1.8",
    "h5py>=3",
    "google-auth>=2.40",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.177",
    "infomap>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/mfschmidt/mfs_tools"
Issues = "https://github.com/mfschmidt/mfs_tools/issues"

[project.scripts]
mfs_aggregate_decoders = "mfs_tools.commands.mfs_aggregate_decoders:main"
mfs_concat = "mfs_tools.commands.mfs_concat:main"
mfs_decode = "mfs_tools.commands.mfs_decode:main"
mfs_decoder_from_mask_and_weights = "mfs_tools.commands.mfs_decoder_from_mask_and_weights:main"
mfs_file_info = "mfs_tools.commands.mfs_file_info:main"
mfs_make_fconn_networks = "mfs_tools.commands.mfs_make_fconn_networks.py:main"
mfs_make_infomap_and_cifti = "mfs_tools.commands.mfs_make_infomap_and_cifti.py:main"
mfs_plot_memory_usage = "mfs_tools.commands.mfs_plot_memory_usage.py:main"
mfs_send_gmail = "mfs_tools.commands.mfs_send_gmail:main"
